# llvm-toy

./: .gitignore  CMakeLists.txt  README.md
include/Template/: README.md  Template.h
include/Utils/: Log.h
lib/: CMakeLists.txt
lib/Lex/: Lexer.cpp  Lexer.h  TokensDef.inc
lib/Template/: Template.cpp
scripts/: build.py
tool/: CMakeLists.txt
tool/toyc/: toyc.cpp
ut/: CMakeLists.txt
ut/TemplateTest/: CMakeLists.txt  TemplateTest.cpp
